--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
     <module>xenon-ui</module>
     <module>xenon-swagger</module>
     <module>xenon-dns</module>
+    <module>xenon-security</module>
   </modules>
 
   <properties>
