Working model for GenericAuthN

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
     <module>xenon-ui</module>
     <module>xenon-swagger</module>
     <module>xenon-dns</module>
+    <module>xenon-security</module>
   </modules>
 
   <properties>
@@ -110,6 +111,7 @@
       <modules>
         <module>xenon-host</module>
         <module>xenon-samples</module>
+        <module>xenon-security</module>
         <module>xenon-dns</module>
         <module>xenon-loader-test</module>
         <module>xenon-websocket-test</module>
@@ -125,6 +127,7 @@
       <modules>
         <module>xenon-host</module>
         <module>xenon-samples</module>
+        <module>xenon-security</module>
         <module>xenon-dns</module>
         <module>xenon-loader-test</module>
         <module>xenon-websocket-test</module>
