Generifying the security module
-- AuthenticationServiceHost was created and support to add any number of
auth providers was added.

-- ClaimsVerificationState was removed and data was
sent simply as claims object.

--- a/xenon-security/pom.xml
+++ b/xenon-security/pom.xml
@@ -73,7 +73,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.vmware.xenon.authn.vidm.VidmServiceHost</mainClass>
+                            <mainClass>com.vmware.xenon.authn.common.AuthenticationServiceHost</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
